@@ -11,3 +11,4 @@ Version 3.0.1
     8. 2022.03.02 Adds fractional tick argument to BAR and TBAR functions.
     9. 2022.04.01 Defines sub-instruments for MODX plugin new-maple-kit.
    10. 2022.04.04 Adds permutations function.
+   11. 2022.04.12 Adds round-robin keymap.
